Testing añadido tras corrupcion de datos